<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ripple"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/crd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="7dp"
        app:cardBackgroundColor="@color/color_card_background"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:id="@+id/layoutRoot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <ir.saeedsoft.smsbook.CustomTextview
                android:id="@+id/txtName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:paddingRight="10dp"
                android:textColor="@color/abc_secondary_text_material_light" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/dim_foreground_material_dark"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:orientation="vertical"
                    android:id="@+id/lnrCopy">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".6"
                        android:src="@drawable/ic_copy" />

                    <ir.saeedsoft.smsbook.CustomTextview
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:text="@string/copy"
                        android:textColor="@color/material_grey_900" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:orientation="vertical"
                    android:id="@+id/lnrShare">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".6"
                        android:src="@drawable/ic_share" />

                    <ir.saeedsoft.smsbook.CustomTextview
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:text="@string/share"
                        android:textColor="@color/material_grey_900" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:orientation="vertical"
                    android:id="@+id/lnrSms">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".6"
                         />

                    <ir.saeedsoft.smsbook.CustomTextview
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".4"
                        android:gravity="center"

                        android:textColor="@color/material_grey_900" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:orientation="vertical"
                    android:id="@+id/lnrFav">

                    <ImageView
                        android:id="@+id/imgFav"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".6"
                        android:src="@drawable/fav_off" />

                    <ir.saeedsoft.smsbook.CustomTextview
                        android:id="@+id/textView"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:text="@string/fav"
                        android:textColor="@color/material_grey_900" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>
